--- a/templates/recetas_app/base.html
+++ b/templates/recetas_app/base.html
@@ -6,13 +6,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}El Recetario{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}?v={% now 'U' %}">
     <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
     {# Font Awesome para iconos #}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     {# Google Fonts para "Playfair Display" (para títulos del banner) y "Inter" (para texto general) #}
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     {% block extra_head %}{% endblock %}
+        <style>
+        .nav-icon-link {
+            position: relative;
+        }
+
+        /*Marca de mensaje*/
+.badge {
+    background-color: var(--favorite-filled);
+    color: var(--white-text);
+    font-size: 10px;
+    font-weight: bold;
+    border-radius: 50%;
+    padding: 3px 6px;
+    position: absolute;
+    top: 20px;
+    right: 5px;
+    min-width: 2px;
+    text-align: center;
+    line-height: 1;
+    border: 2px solid #0b1f3c;
+        }
+    </style>
 </head>
 <body>
     <header class="main-header-new">
